# openvaia

./: .env.template  .gitignore  CLAUDE.md  Dockerfile.agents  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
inotagent/: Dockerfile  chat.sh  entrypoint.sh  models.yml  platform.yml  pyproject.toml
inotagent-trading/: .dockerignore  .env.template  .gitignore  Dockerfile  Makefile  guardrails.py  pyproject.toml
inotagent-trading/cli/: __init__.py  backtest.py  backtest_composite.py  backtest_grid.py  grid.py  market.py  portfolio.py  signals.py  strategy.py  trade.py
inotagent-trading/core/: config.py  db.py  exchange.py  filters.py  indicators.py  models.py  sentiment.py
inotagent-trading/poller/: base.py
inotagent-trading/strategies/: base.py  bollinger.py  dca_grid.py  mean_reversion.py  momentum.py  pyramid_trend.py  rsi_divergence.py  trend_follow.py  volatility_breakout.py
inotagent-trading/tests/: test_dca_grid.py  test_exchange.py  test_guardrails.py  test_indicators.py  test_poller.py
inotagent/skills/: 0__communication.md  0__development_workflow.md  0__idle_behavior.md  0__memory_and_improvement.md  0__resource_first_research.md  0__task_management.md  1__access_audit.md  1__accessibility_audit.md  1__ad_copywriting.md  1__analytics_reporting.md  1__anomaly_detection.md  1__api_documentation.md  1__api_testing.md  1__architecture_decisions.md  1__brainstorming.md  1__bug_analysis.md  1__canary_monitoring.md  1__churn_prediction.md  1__cloud_cost_optimization.md  1__code_review.md  1__code_review_advanced.md  1__coding_scope.md  1__competitor_pricing_analysis.md  1__contract_review.md  1__course_design.md  (+83 more)
ui/: Dockerfile  (+3 more)
(+236 files in other folders)
