[project]
name = "inotagent-trading"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = "Trading toolkit for Robin — CLI tools, data pollers, backtesting"

dependencies = [
    "ccxt>=4.0",
    "pandas>=2.0",
    "pandas-ta>=0.3",
    "requests>=2.31",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "pydantic-settings>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
target-version = "py312"
line-length = 120
